# simulations

./: .gitignore  README.md  pyproject.toml  requirements.txt
apr-simulations/: cost_curves.ipynb  rpch_queries_sizes.ipynb  sigmoid_cost.ipynb  stake_distribution.ipynb  sum_curve.ipynb  yield_curve.ipynb  yield_curve_tan.ipynb
apr-simulations/assets/: composition.config.yaml  node_stake.config.yaml  parameters.yaml  sigmoid.config.pow.1.2.yaml
apr-simulations/helpers/: hoprd_api.py  rpchpostgres.py  utils.py
apr_simulations/: cost_curves.ipynb  investment_scheme.ipynb  requirements.txt  rpch_queries_sizes.ipynb  scheme.ipynb  sigmoid.config.yaml  stake_distribution.ipynb  yield_curve.ipynb
baseline_checksum/: __main__.py  block.py  event.py  events.graphql
checksum-baseline/: .env.example  __main__.py  block.py  blocks_io.py  event.py  events_io.py  graphql_provider.py  library.py
compare_rpcs/: README.md  __main__.py  config.redacted.yml  config_parser.py  rpc_url.py
lib/: colors.py  exporter.py  helper.py  taskmanager.py
lib/rpc/: __init__.py  (+2 more)
list_outgoing_balances/: __main__.py  graphql_providers.py  hoprd_api.py  utils.py
outside-safe-balance/: .env.example  __main__.py  helper.py  safe.py  taskmanager.py  utils.py
redeemed_amount/: __main__.py
scripts/: compare_checksums.py  low_stake_safes.sh  new_node_multiaddr.csv  safe_probe.sh
tickets-issued-from-safe/: .env.example  __main__.py  taskmanager.py
waitlist-update/: .env.example  __main__.py  candidate.py  entry.py  graphql_providers.py  helper.py  registration.py  safe.py  utils.py
(+86 files in other folders)
